fixed image links

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
         >
           <img
             class="row-span-2 h-14 justify-self-center"
-            src="/assets/images/avatar-mark-webber.webp"
+            src="../assets/images/avatar-mark-webber.webp"
             alt="User avatar"
           />
           <p class="text-m text-blue-grayish-dark-1">
@@ -61,7 +61,7 @@
         >
           <img
             class="row-span-2 h-14 justify-self-center"
-            src="/assets/images/avatar-angela-gray.webp"
+            src="../assets/images/avatar-angela-gray.webp"
             alt="User avatar"
           />
           <p class="text-m text-blue-grayish-dark-1">
@@ -79,7 +79,7 @@
         >
           <img
             class="row-span-2 h-14 justify-self-center"
-            src="/assets/images/avatar-jacob-thompson.webp"
+            src="../assets/images/avatar-jacob-thompson.webp"
             alt="User avatar"
           />
           <p class="text-m text-blue-grayish-dark-1">
@@ -96,7 +96,7 @@
         <div class="grid grid-cols-[1fr_3fr] p-5 rounded-xl mb-4">
           <img
             class="row-span-2 h-14 justify-self-center"
-            src="/assets/images/avatar-rizky-hasanuddin.webp"
+            src="../assets/images/avatar-rizky-hasanuddin.webp"
             alt="User avatar"
           />
           <p class="text-m text-blue-grayish-dark-1">
@@ -120,7 +120,7 @@
         <div class="grid grid-cols-[1fr_2fr_1fr] p-5 rounded-xl mb-4">
           <img
             class="row-span-2 h-14 justify-self-center"
-            src="/assets/images/avatar-kimberly-smith.webp"
+            src="../assets/images/avatar-kimberly-smith.webp"
             alt="User avatar"
           />
           <p class="text-m text-blue-grayish-dark-1">
@@ -131,7 +131,7 @@
           </p>
           <img
             class="h-12 justify-self-end"
-            src="/assets/images/image-chess.webp"
+            src="../assets/images/image-chess.webp"
             alt="Chess"
           />
           <p class="text-blue-grayish">1 week ago</p>
@@ -140,7 +140,7 @@
         <div class="grid grid-cols-[1fr_3fr] p-5 rounded-xl mb-4">
           <img
             class="row-span-2 h-14 justify-self-center"
-            src="/assets/images/avatar-nathan-peterson.webp"
+            src="../assets/images/avatar-nathan-peterson.webp"
             alt="User avatar"
           />
           <p class="text-m text-blue-grayish-dark-1">
@@ -158,7 +158,7 @@
         <div class="grid grid-cols-[1fr_3fr] p-5 rounded-xl mb-4">
           <img
             class="row-span-2 h-14 justify-self-center"
-            src="/assets/images/avatar-anna-kim.webp"
+            src="../assets/images/avatar-anna-kim.webp"
             alt="User avatar"
           />
           <p class="text-m text-blue-grayish-dark-1">
