--- a/src/index.html
+++ b/src/index.html
@@ -26,19 +26,23 @@
       }
     </style>
   </head>
-  <body class="font-jakarta">
-    <main class="p-4">
+  <body
+    class="font-jakarta md:min-h-screen md:flex flex-col place-items-center justify-center bg-blue-grayish-snow-white"
+  >
+    <main class="p-4 md:p-6 md:max-w-4xl md:rounded-lg bg-white shadow-sm">
       <header class="flex justify-between place-items-center mb-6">
         <h1 class="text-blue-grayish-dark-2 font-extra-bold text-2xl">
           Notifications
           <span class="text-white bg-blue px-3 rounded ml-2">3</span>
         </h1>
-        <p class="text-m text-blue-grayish">Mark all as read</p>
+        <a href="#" class="text-m text-blue-grayish hover:text-blue"
+          >Mark all as read</a
+        >
       </header>
 
-      <section>
+      <section class="md:text-sm">
         <div
-          class="grid grid-cols-[1fr_3fr] bg-blue-grayish-snow-white p-5 rounded-xl mb-4"
+          class="grid grid-cols-[1fr_3fr] bg-blue-grayish-snow-white p-5 rounded-xl mb-4 md:mb-3 md:max-h-24"
         >
           <img
             class="row-span-2 h-14 justify-self-center"
@@ -46,18 +50,22 @@
             alt="User avatar"
           />
           <p class="text-m text-blue-grayish-dark-1">
-            <span class="text-blue-grayish-dark-2 font-extra-bold mr-1"
-              >Mark Webber</span
+            <a
+              href="#"
+              class="text-blue-grayish-dark-2 font-extra-bold mr-1 hover:text-blue"
+              >Mark Webber</a
             >
             reacted to your recent post
-            <span class="font-extra-bold ml-1">My first tournament today!</span>
+            <a href="#" class="font-extra-bold ml-1 hover:text-blue"
+              >My first tournament today!</a
+            >
             <span class="text-xs">🔴</span>
           </p>
           <p class="text-blue-grayish">1m ago</p>
         </div>
 
         <div
-          class="grid grid-cols-[1fr_3fr] bg-blue-grayish-snow-white p-5 rounded-xl mb-4"
+          class="grid grid-cols-[1fr_3fr] bg-blue-grayish-snow-white p-5 rounded-xl mb-4 md:mb-3 md:max-h-24"
         >
           <img
             class="row-span-2 h-14 justify-self-center"
@@ -65,8 +73,10 @@
             alt="User avatar"
           />
           <p class="text-m text-blue-grayish-dark-1">
-            <span class="text-blue-grayish-dark-2 font-extra-bold mr-1"
-              >Angela Gray</span
+            <a
+              href="#"
+              class="text-blue-grayish-dark-2 font-extra-bold mr-1 hover:text-blue"
+              >Angela Gray</a
             >
             followed you
             <span class="text-xs">🔴</span>
@@ -75,7 +85,7 @@
         </div>
 
         <div
-          class="grid grid-cols-[1fr_3fr] bg-blue-grayish-snow-white p-5 rounded-xl mb-4"
+          class="grid grid-cols-[1fr_3fr] bg-blue-grayish-snow-white p-5 rounded-xl mb-4 md:mb-3 md:max-h-24"
         >
           <img
             class="row-span-2 h-14 justify-self-center"
@@ -83,25 +93,31 @@
             alt="User avatar"
           />
           <p class="text-m text-blue-grayish-dark-1">
-            <span class="text-blue-grayish-dark-2 font-extra-bold mr-1"
-              >Jacob Thompson</span
+            <a
+              href="#"
+              class="text-blue-grayish-dark-2 font-extra-bold mr-1 hover:text-blue"
+              >Jacob Thompson</a
             >
             has joined your group
-            <span class="font-extra-bold ml-1 text-blue">Chess Club</span>
+            <a href="#" class="font-extra-bold ml-1 text-blue">Chess Club</a>
             <span class="text-xs">🔴</span>
           </p>
           <p class="text-blue-grayish">1 day ago</p>
         </div>
 
-        <div class="grid grid-cols-[1fr_3fr] p-5 rounded-xl mb-4">
+        <div
+          class="grid grid-cols-[1fr_3fr] p-5 rounded-xl mb-4 md:mb-3 md:max-h-48"
+        >
           <img
             class="row-span-2 h-14 justify-self-center"
             src="../assets/images/avatar-rizky-hasanuddin.webp"
             alt="User avatar"
           />
           <p class="text-m text-blue-grayish-dark-1">
-            <span class="text-blue-grayish-dark-2 font-extra-bold mr-1"
-              >Rizky Hasanuddin</span
+            <a
+              href="#"
+              class="text-blue-grayish-dark-2 font-extra-bold mr-1 hover:text-blue"
+              >Rizky Hasanuddin</a
             >
             sent you a private message
           </p>
@@ -117,15 +133,19 @@
           </div>
         </div>
 
-        <div class="grid grid-cols-[1fr_2fr_1fr] p-5 rounded-xl mb-4">
+        <div
+          class="grid grid-cols-[1fr_2fr_1fr] p-5 rounded-xl mb-4 md:mb-3 md:max-h-24"
+        >
           <img
             class="row-span-2 h-14 justify-self-center"
             src="../assets/images/avatar-kimberly-smith.webp"
             alt="User avatar"
           />
           <p class="text-m text-blue-grayish-dark-1">
-            <span class="text-blue-grayish-dark-2 font-extra-bold mr-1"
-              >Kimberly Smith</span
+            <a
+              href="#"
+              class="text-blue-grayish-dark-2 font-extra-bold mr-1 hover:text-blue"
+              >Kimberly Smith</a
             >
             commented on your picture
           </p>
@@ -137,36 +157,44 @@
           <p class="text-blue-grayish">1 week ago</p>
         </div>
 
-        <div class="grid grid-cols-[1fr_3fr] p-5 rounded-xl mb-4">
+        <div
+          class="grid grid-cols-[1fr_3fr] p-5 rounded-xl mb-4 md:mb-3 md:max-h-24"
+        >
           <img
             class="row-span-2 h-14 justify-self-center"
             src="../assets/images/avatar-nathan-peterson.webp"
             alt="User avatar"
           />
           <p class="text-m text-blue-grayish-dark-1">
-            <span class="text-blue-grayish-dark-2 font-extra-bold mr-1"
-              >Nathan Peterson</span
+            <a
+              href="#"
+              class="text-blue-grayish-dark-2 font-extra-bold mr-1 hover:text-blue"
+              >Nathan Peterson</a
             >
             reacted to your recent post
-            <span class="font-extra-bold ml-1"
-              >5 end-game strategies to increase your win rate</span
+            <a href="#" class="font-extra-bold ml-1 hover:text-blue"
+              >5 end-game strategies to increase your win rate</a
             >
           </p>
           <p class="text-blue-grayish">2 weeks ago</p>
         </div>
 
-        <div class="grid grid-cols-[1fr_3fr] p-5 rounded-xl mb-4">
+        <div
+          class="grid grid-cols-[1fr_3fr] p-5 rounded-xl mb-4 md:mb-3 md:max-h-24"
+        >
           <img
             class="row-span-2 h-14 justify-self-center"
             src="../assets/images/avatar-anna-kim.webp"
             alt="User avatar"
           />
           <p class="text-m text-blue-grayish-dark-1">
-            <span class="text-blue-grayish-dark-2 font-extra-bold mr-1"
-              >Anna Kim</span
+            <a
+              href="#"
+              class="text-blue-grayish-dark-2 font-extra-bold mr-1 hover:text-blue"
+              >Anna Kim</a
             >
             left the group
-            <span class="font-extra-bold ml-1 text-blue">Chess Club</span>
+            <a href="#" class="font-extra-bold ml-1 text-blue">Chess Club</a>
           </p>
           <p class="text-blue-grayish">2 weeks ago</p>
         </div>
