restructured folders and fixed links

--- a/index.html
+++ b/index.html
@@ -157,11 +157,13 @@
             >
             commented on your picture
           </p>
-          <img
-            class="h-12 justify-self-end"
-            src="assets/images/image-chess.webp"
-            alt="Chess"
-          />
+          <a class="justify-self-end hover:scale-125 transition-all" href="#">
+            <img
+              class="h-12 md:h-14 justify-self-end"
+              src="assets/images/image-chess.webp"
+              alt="Chess"
+            />
+          </a>
           <p class="text-blue-grayish">1 week ago</p>
         </div>
 
